# neptuns-eye

./: .gitignore  .polyscope.ini  AUTHORS  Dockerfile  LICENSE  Makefile  README.md  config.py  entrypoint.sh  hello.py  imgui.ini  main.py  main.spec  pyproject.toml  requirements.txt
.github/workflows/: actions_testing.yml
AI/: config.py
AI/preprocess/: preprocess.py
AI/storage/: load.py  save.py
AI/utils/: columns.py  data_normalization.py  data_visualizations.py  preprocess.py  universal_train_XD.py
architectures/ml/: predict.py  train.py
code/: main.py  preprocess.py  saving.py  train.py
datacards/: USER AREA datacard.md  WMII_CLASS datacard.md  detailed_las_data_information.md  kortowo datacard.md
experiments/model/: artifacts.py
experiments/sweeps/: SVC_config.py  (+5 more)
neptuns-eye/: file_frame.py  las_handler.py  main_window.py  requirements.txt  visualisation_frame.py
neptunseye/: classification_frame.py  classification_utils.py  constants.py  file_frame.py  import_file_frame.py  las_handler.py  log_frame.py  main.py  main.spec  main_window.py  os_utils.py  requirements.txt  script_pptk.py  visualisation_frame.py
optimised_visualization/: vis_o3d.py  vis_plt.py
preprocess/: preprocess.py
random_forest/: main.py  preprocess.py  sample_points.py  train.py  visualize.py
research/: config.py
storage/: load.py  save.py
tests/: fetch_models.py  test_classification_frame.py  test_file_frame.py  test_icon.py  test_las_files.py  test_las_handler.py  test_models.py  test_rendering_performance.py  test_visualisation_frame.py
utils/: preprocess.py
(+864 files in other folders)
