[tool.poetry]
name = "neptuns-eye"
version = "0.1.0"
description = "Point Cloud segmentation."
authors = ["KNSI Czarna Magia <czarnamagiaknsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
contourpy = "1.2.0"
ctkmessagebox = "2.5"
customtkinter = "5.2.2"
cycler = "0.12.1"
darkdetect = "0.8.0"
fonttools = "4.50.0"
joblib = "1.3.2"
kiwisolver = "1.4.5"
laspy = "2.5.3"
matplotlib = "3.8.3"
numpy = "1.26.4"
packaging = "24.0"
pandas = "2.2.1"
pillow = "10.3.0"
plotly = "5.20.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
scikit-learn = "1.3.0"
scipy = "1.12.0"
six = "1.16.0"
tenacity = "8.2.3"
threadpoolctl = "3.4.0"
tzdata = "2024.1"
pytest = "8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

